fixed width issue with icons.  change their size. fixed expanded menu on mobile

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -39,7 +39,7 @@
   position: fixed !important;
   font-family: "Georama" !important;
   display: flex !important;
-  justify-content: "space-between" !important;
+  justify-content: "center" !important;
   top: 0 !important;
   z-index: 100 !important;
 }
